--- a/clase/index.html
+++ b/clase/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Java script</h1>
-    <script src="main.js">
-        
-    </script>
+    
 </body>
 </html>
